samples/_failures_safe/1761624112_96c953_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b671241.c: In function ‘main’:
./samples/SAFE/__tmp_4b671241.c:159:5: error: expected expression at end of input
  159 |     size_t len =
      |     ^~~~~~
./samples/SAFE/__tmp_4b671241.c:159:5: error: expected declaration or statement at end of input
